--- a/css/styles.css
+++ b/css/styles.css
@@ -364,3 +364,19 @@ form#formulario-producto button:hover {
   font-weight: bold;
   color: #333;
 }
+
+
+/* === INDICACIONES.HTML === */
+
+.boton {
+  display: inline-block;
+  padding: 10px 15px;
+  background-color: #1e90ff;
+  color: #fff;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+}
+.boton:hover {
+  background-color: #0b6ec6;
+}
